--- a/Calculator/res/layout/login.xml
+++ b/Calculator/res/layout/login.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/adroid" >
+    android:background="@color/purple" >
 
     <TextView
-        android:id="@+id/etemail"
+        android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email"
@@ -15,7 +15,7 @@
         android:textColor="#000000"/>
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/etemail"
         android:layout_width="281dp"
         android:layout_height="37dp"
         android:layout_margin="10dp"
@@ -27,7 +27,7 @@
     </EditText>
 
     <TextView
-        android:id="@+id/etpassword"
+        android:id="@+id/textview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/password"
@@ -36,7 +36,7 @@
         android:textColor="#000000"/>
     
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/etpassword"
         android:layout_width="match_parent"
         android:layout_height="39dp"
         android:layout_margin="10dp"
