--- a/Calculator/res/layout/register.xml
+++ b/Calculator/res/layout/register.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/adroid"
+    android:background="@color/purple"
      android:textAlignment="center">
 
     <TextView
