--- a/Calculator/res/layout/welcome.xml
+++ b/Calculator/res/layout/welcome.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/adroid" >
+    android:background="@color/purple" >
 
     <Button
         android:id="@+id/btnLogin"
